1. Connections grid responsive layout overflow issue fixed 2. Navigation menu dashboard icon changed

--- a/Mqtt.Server.Web/Components/Layout/MainLayout.razor.css
+++ b/Mqtt.Server.Web/Components/Layout/MainLayout.razor.css
@@ -49,8 +49,14 @@ main {
 
     .sidebar {
         width: 250px;
+        min-width: 250px;
         height: 100vh;
         max-height: 100vh;
+    }
+
+    .top-row {
+        position: sticky;
+        top: 0;
     }
 
     .top-row ::deep > nav.nav {
@@ -61,12 +67,6 @@ main {
         flex: 1;
         text-align: right;
         width: 0;
-    }
-
-    .top-row,
-    article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
     }
 }
 
